src/objects/AMS_Voucher__c.object
<CustomObject>
    <fields>
        <fullName>AMS_Voucher_Process_Run__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AMS Voucher Process Run</label>
        <referenceTo>AMS_Voucher_Process_Run__c</referenceTo>
        <relationshipLabel>Vouchers Process Runs</relationshipLabel>
        <relationshipName>Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Voucher&apos;s Issue Date</description>
        <inlineHelpText>Voucher&apos;s Issue Date</inlineHelpText>
        <label>Issue Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pdf_Attachment_File__c</fullName>
        <label>Pdf Attachment File</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SequenceNumber__c</fullName>
        <description>X of Y vouchers created for this agency</description>
        <inlineHelpText>X of Y vouchers created for this agency</inlineHelpText>
        <label>SequenceNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher_Information__c</fullName>
        <label>Voucher Information</label>
        <referenceTo>AMS_Voucher_Information__c</referenceTo>
        <relationshipLabel>Vouchers</relationshipLabel>
        <relationshipName>Vouchers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Voucher_Remark__c</fullName>
        <inlineHelpText>Just a text field to provide any additional comments on the Voucher</inlineHelpText>
        <label>Voucher Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>runExecution__c</fullName>
        <label>Run Execution</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Voucher</label>
    <nameField>
        <displayFormat>A{000000000}</displayFormat>
        <label>Voucher Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vouchers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>